
	* Release eet 1.2.0

2009-05-18  Cedric BAIL

	* Cleanup Eet_Data code.

2009-06-02  Cedric BAIL

	* Make eet_node API usable.

2009-06-14  Carsten Haitzler (The Rasterman)

	* Release eet 1.2.1

2009-07-08  Cedric BAIL

	* Reorder gcry init to be used during gnutls init.

2009-07-11  Hanspeter Portner

	* Improve docs/examples in Eet.h

2009-07-23  Cedric BAIL

	* Fix init on system without SECMEM.

2009-07-29  Carsten Haitzler (The Rasterman)

        * Release eet 1.2.2

2009-08-13  Cedric BAIL

	* Deprecating eet_data_descriptor*_new.
	* Add eet_data_descriptor_stream_new and eet_data_descriptor_file_new.
	* Add eina helper.
	* Cleanup Eet_Data_Descriptor code.

2009-08-16  Carsten Haitzler (The Rasterman)

	* Fix eet data encode to encode empty structs etc. so save saves
          something as opposed to nothing

2009-08-16  Carsten Haitzler (The Rasterman)

	* Fix documentation of eet_data_write() and eet_write() for return
          value to return # of bytes written, not 1 or 0

2009-08-16  Vincent Torri

	* Fix build with suncc (missing alloca() declaration in eet_cipher.c)

2009-09-15  Mathieu Taillefumier

	* Use new Eina_Log infrastructure to report error.

2009-09-15  Cedric BAIL

	* Remove apparently useless eet_freeleak_* from eet_data.

2009-09-29  Cedric BAIL

	* Add Fixed Point support and make it possible to switch from float
	and double to any fixed point variant supported by eina.

	Note: File saved with fixed point could be read by older version of
	eet library with EET_T_DOUBLE type.

2009-10-01  Mathieu Taillefumier

	* remove useless Eina_Log macros.

2009-10-01  Vincent Torri

	* Check the returned value of eet_init() in the binary.
	* Use binary mode of fopen() in eet_main() for Windows compatibility.

2009-10-09  Vincent Torri

	* initialize eina first in eet_init().

2009-11-02  Vincent Torri

	* allow generation of one single file with all source code in it.
	See configure help to enable it (--enable-amalgamation).